--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
                     <form>
                         <div class="mb-3">
                             <label for="recipient-name" class="col-form-label">Username:</label>
-                            <input type="text" class="form-control" id="username-input" value="boda5555">
+                            <input type="text" class="form-control" id="username-input" >
                         </div>
                         <div class="mb-3">
                             <label for="message-text" class="col-form-label">Password:</label>
-                            <input type="password" class="form-control" id="password-input" value="123456">
+                            <input type="password" class="form-control" id="password-input">
                         </div>
                     </form>
                 </div>
