--- a/index1.html
+++ b/index1.html
@@ -30,11 +30,11 @@
                     <form>
                         <div class="mb-3">
                             <label for="recipient-name" class="col-form-label">Username:</label>
-                            <input type="text" class="form-control" id="username-input" value="boda5555">
+                            <input type="text" class="form-control" id="username-input">
                         </div>
                         <div class="mb-3">
                             <label for="message-text" class="col-form-label">Password:</label>
-                            <input type="password" class="form-control" id="password-input" value="123456">
+                            <input type="password" class="form-control" id="password-input">
                         </div>
                     </form>
                 </div>
@@ -119,7 +119,7 @@
                                 <a class="nav-link active primary" aria-current="page" href="index.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link primary" onclick="profileBtn()"style="cursor: pointer;">Profile</a>
+                                <a class="nav-link primary" onclick="profileBtn()" style="cursor: pointer;">Profile</a>
                             </li>
 
                         </ul>
@@ -160,8 +160,7 @@
                 <!-- post -->
                 <div class="card shadow mb-3">
                     <div class="card-header">
-                        <img id="user-img" class="border border-4"
-                            src="" alt="">
+                        <img id="user-img" class="border border-4" src="" alt="">
                         <span id="user-name"></span>
                     </div>
                     <div class="card-body">
@@ -197,7 +196,7 @@
                         </div>
                     </div>
                     <div class="add-comment" id="add-comment">
-                        <input  type="text" placeholder="Add your comment" id="add-comment-input">
+                        <input type="text" placeholder="Add your comment" id="add-comment-input">
                         <button data-post-id onclick="createComment()" class=" btn btn-outline-primary send-comment">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                 class="bi bi-send" viewBox="0 0 16 16">
