--- a/index2.html
+++ b/index2.html
@@ -30,11 +30,11 @@
                     <form>
                         <div class="mb-3">
                             <label for="recipient-name" class="col-form-label">Username:</label>
-                            <input type="text" class="form-control" id="username-input" value="boda5555">
+                            <input type="text" class="form-control" id="username-input" >
                         </div>
                         <div class="mb-3">
                             <label for="message-text" class="col-form-label">Password:</label>
-                            <input type="password" class="form-control" id="password-input" value="123456">
+                            <input type="password" class="form-control" id="password-input" >
                         </div>
                     </form>
                 </div>
@@ -236,11 +236,11 @@
                             <div class="col-4  d-flex flex-column justify-content-evenly counters">
                                 <div class="num-info">
                                     <span class="num-span" id="postSpan"></span>
-                                    
+                                    Post
                                 </div>
                                 <div class="num-info">
                                     <span class="num-span" id="comentSpan"></span>
-                                    
+                                    Comment
                                 </div>
                             </div>
                         </div>
